# safecopy

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/safecopy/android/: CopyService.kt  MainActivity.kt  ManifestStore.kt  Models.kt  NativeIo.kt  SafDocuments.kt  SafeCopyEngine.kt  SourceFilters.kt  StorageLocator.kt
android/app/src/main/jni/: Android.mk  native_io.cpp
android/app/src/main/res/drawable/: ic_app.xml  ic_app_foreground.xml
android/app/src/main/res/mipmap-anydpi/: ic_launcher.xml
android/app/src/main/res/values/: colors.xml  styles.xml
android/app/src/test/java/com/safecopy/android/: SourceFiltersTest.kt
android/scripts/: build-native-arm64.sh
hashtools/: Cargo.toml
hashtools/macos/: icon.icns
hashtools/scripts/: package-macos.sh
hashtools/src/: app.rs  checksums.rs  hash.rs  main.rs  worker.rs
macos/: icon.icns
scripts/: package-macos.sh  package-windows.ps1
src/: cli.rs  copy.rs  error.rs  gui.rs  hash.rs  io_flags.rs  main.rs  manifest.rs  progress.rs  quarantine.rs  sanity.rs  state.rs  timestamps.rs  verify.rs
