[package]
name = "safecopy"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
filetime = "0.2"
walkdir = "2.5"
crossbeam-channel = "0.5"
thiserror = "1.0"
anyhow = "1.0"
indicatif = "0.17"
humantime = "2.1"
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow"] }
rfd = "0.14"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
lto = "thin"
codegen-units = 1

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Допустимо — слишком шумные для системного кода:
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
